--- a/Planets.css
+++ b/Planets.css
@@ -6,6 +6,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   background-attachment: fixed;
+  font-family: "Lato", sans-serif;
 }
 
 h1 {
